cabal-version: 1.12
name:           haskalytic
version:        0.1.0.0
description:    Analysis of large Haskell projects.
homepage:       https://github.com/githubuser/haskalytic#readme
bug-reports:    https://github.com/githubuser/haskalytic/issues
author:         Paul Johnson
maintainer:     paul@cogito.org.uk
copyright:      Ⓒ 2022 Paul Johnson
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/haskalytic

library
  exposed-modules:
      HieDb.HieGraph
  other-modules:
      Paths_haskalytic
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable haskalytic-exe
  main-is: Main.hs
  other-modules:
      Paths_haskalytic
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , haskalytic
  default-language: Haskell2010

test-suite haskalytic-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_haskalytic
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , haskalytic
  default-language: Haskell2010
